--- a/SandBox/connectML/connectML/Base.lproj/Main.storyboard
+++ b/SandBox/connectML/connectML/Base.lproj/Main.storyboard
@@ -93,10 +93,9 @@
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="agepredictLabel" destination="Hhf-1G-N7B" id="Okn-sK-fcG"/>
-                        <outlet property="emotionLabel" destination="AYZ-N4-Ah6" id="enf-1Y-e0e"/>
+                        <outlet property="emotionLabel" destination="dMo-Dv-z8X" id="5yv-7b-vjz"/>
                         <outlet property="imageView" destination="peN-kE-LzO" id="WDw-5E-2xJ"/>
-                        <outlet property="predictLabel" destination="dMo-Dv-z8X" id="BKq-bj-IaG"/>
+                        <outlet property="predictLabel" destination="Hhf-1G-N7B" id="1DV-qJ-aFJ"/>
                         <outlet property="recheckButton" destination="GGP-6o-NC0" id="EAc-jP-Ti7"/>
                     </connections>
                 </viewController>
