--- a/Koting/Koting/Controller/MyInfo/MyInfoHeaderVC.xib
+++ b/Koting/Koting/Controller/MyInfo/MyInfoHeaderVC.xib
@@ -10,10 +10,10 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MyInfoHearderVC" customModule="Koting" customModuleProvider="target">
             <connections>
-                <outlet property="matchPercentLabel" destination="Mqg-eX-Efv" id="itU-HO-X1O"/>
+                <outlet property="myAnimalFace" destination="4JH-sA-hSi" id="ZdU-L3-EOb"/>
                 <outlet property="myAnimalFaceImage" destination="LRF-K5-Dff" id="Cy1-Nl-Sfq"/>
-                <outlet property="myAnimalFaceLabel" destination="p6F-cA-Was" id="rDN-Ss-Hcd"/>
-                <outlet property="nickName" destination="4JH-sA-hSi" id="X9q-Kb-yAQ"/>
+                <outlet property="myMajorAndMBTI" destination="p6F-cA-Was" id="JTi-4b-LTz"/>
+                <outlet property="myNickname" destination="Mqg-eX-Efv" id="EYv-Iq-Vw0"/>
                 <outlet property="subHeader" destination="aXB-dl-3y6" id="Gob-Ii-2N9"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
@@ -38,7 +38,7 @@
                                 </imageView>
                             </subviews>
                         </stackView>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="매칭률 68.2%" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mqg-eX-Efv">
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="8글자를채워보자" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mqg-eX-Efv">
                             <rect key="frame" x="20" y="30" width="180" height="30"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="180" id="09V-iE-9Ip"/>
@@ -50,7 +50,7 @@
                         <stackView opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="4Wt-ld-mw8">
                             <rect key="frame" x="20" y="70" width="180" height="44"/>
                             <subviews>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="내 동물상 | 공룡상" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p6F-cA-Was">
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="국어문예창작학과 | 공룡상" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p6F-cA-Was">
                                     <rect key="frame" x="0.0" y="0.0" width="180" height="18"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="180" id="Iie-xY-w3O"/>
